Correct text alignment in final para

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,6 @@ img {
 #final {
     font-weight: bold;
     font-size: 1.5em;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
+    text-align: center;
 }
